line breaks in index and new views, fixed seed file for players

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+p {
+    font-size: 20px;
+}
+
+body {
+    text-align: ; 
+}
+
+/*********************** LOGIN STYLE  **************************/
+.login {
+    height: 200px;
+    width: 400px;
+    position: center;
+    background-image: url(https://i.kinja-img.com/gawker-media/image/upload/s--5fSOe0hN--/c_fill,fl_progressive,g_center,h_900,q_80,w_1600/18he4twayfxh9jpg.jpg);
+    background-position: center;
+}
